k8s/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: grocery-ingress
  namespace: grocery

spec:
  ingressClassName: nginx

  rules:
    - host: grocery.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: grocery-app-service
                port:
                  number: 80
